--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author: RAIE Organization Committee
 navbar-links:
   # Call for Papers: "call"
   RAIE'24: "RAIEWorkshop24"
-  RAIE SI: "https://raiengineering.github.io/RAIE/RAIESI/"
+  TAI SI: "https://raiengineering.github.io/RAIE/RAIESI/"
   Past series:
     - SE4RAI'22: "https://conf.researchr.org/home/icse-2022/se4rai-2022"
     - Computer-SI-SE4RAI: "https://www.computer.org/digital-library/magazines/co/call-for-papers-special-issue-on-software-engineering-for-responsible-ai"
