--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,11 @@ author: RAIE Organization Committee
 
 navbar-links:
   # Call for Papers: "call"
-  RAIE'24: "RAIEWorkshop24"
-  TAI SI: "https://raiengineering.github.io/RAIE/RAIESI/"
+  RAIE'25: "RAIE2025"
   Past series:
+    - RAIE'24: "https://conf.researchr.org/home/icse-2024/raie-2024"
     - SE4RAI'22: "https://conf.researchr.org/home/icse-2022/se4rai-2022"
+    - TAI SI: "https://raiengineering.github.io/RAIE/RAIESI/"
     - Computer-SI-SE4RAI: "https://www.computer.org/digital-library/magazines/co/call-for-papers-special-issue-on-software-engineering-for-responsible-ai"
   # Contact: "mailto:qinghua.lu@data61.csiro.au"
 
