added TAI SI Back

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navbar-links:
   Past series:
     - RAIE'24: "https://conf.researchr.org/home/icse-2024/raie-2024"
     - SE4RAI'22: "https://conf.researchr.org/home/icse-2022/se4rai-2022"
-    - TAI SI: "https://raiengineering.github.io/RAIE/RAIESI/"
+    - TAI SI: "RAIESI"
     - Computer-SI-SE4RAI: "https://www.computer.org/digital-library/magazines/co/call-for-papers-special-issue-on-software-engineering-for-responsible-ai"
   # Contact: "mailto:qinghua.lu@data61.csiro.au"
 
