--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Responsible AI Engineering & Agent Engineering
-
+title: Home
 # Your name to show in the footer
 # author: RAIE Organization Committee
 
@@ -15,7 +14,7 @@ title: Responsible AI Engineering & Agent Engineering
 
 navbar-links:
   # Call for Papers: "call"
-  Agent Engineering 2026: "AgentEng26"
+  Agent Engineering 2026: "Agent2026"
   Past series:
     - RAIE'25: "https://conf.researchr.org/home/icse-2025/raie-2025"
     - RAIE'24: "https://conf.researchr.org/home/icse-2024/raie-2024"
